# omnia

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
Common/: File.h  Noncopyable.h
Libraries/: CMakeLists.txt
Libraries/LibAsset/: AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  CMakeLists.txt  Forward.h  ImportManager.cpp  ImportManager.h  Importer.h  ModelImporter.cpp  ModelImporter.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderImporter.cpp  ShaderImporter.h  TextureImporter.cpp  TextureImporter.h
Libraries/LibConcurrency/: Awaitable.cpp  Awaitable.h  CMakeLists.txt  Queue.h  Scheduler.cpp  Scheduler.h  Task.h
Libraries/LibCore/: CMakeLists.txt  Input.cpp  Input.h  Temp.cpp  Win32Window.cpp  Win32Window.h  Window.h
Libraries/LibDebug/: CMakeLists.txt  Forward.h
Libraries/LibGraphics/: Buffer.h  CMakeLists.txt  Device.cpp  Device.h  Forward.h  ModelTypes.h  Renderer.cpp  Renderer.h  Shader.h  ShaderTypes.h  Swapchain.h  Texture.h  TextureTypes.h
Libraries/LibGraphics/D3D12/: DX12Buffer.cpp  DX12Buffer.h  DX12Device.cpp  DX12Device.h  DX12Shader.cpp  DX12Shader.h  DX12Swapchain.cpp  DX12Swapchain.h  DX12Texture.cpp  DX12Texture.h
Libraries/LibGraphics/Metal/: MTLBuffer.cpp  MTLBuffer.h  MTLDevice.cpp  MTLDevice.h  MTLShader.cpp  MTLShader.h  MTLSwapchain.cpp  MTLSwapchain.h  MTLTexture.cpp  MTLTexture.h
Libraries/LibGraphics/Vulkan/: VkBuffer.cpp  VkBuffer.h  VkDevice.cpp  VkDevice.h  VkShader.cpp  VkShader.h  VkSwapchain.cpp  VkSwapchain.h  VkTexture.cpp  VkTexture.h
Libraries/LibMath/: CMakeLists.txt  Mat4.h  Math.h  Quat.h  Temp.cpp  Vec2.h  Vec3.h  Vec4.h
Libraries/LibPlatform/: CMakeLists.txt  UUID.h
Libraries/LibPlatform/Win32/: UUIDWin32.cpp
Libraries/LibRHI/: Buffer.h  CMakeLists.txt  CommandBuffer.h  Device.cpp  Device.h  Forward.h  Pipeline.h  RenderPass.h  RenderTarget.h  ResourceLayout.h  ResourceSet.h  Sampler.h  Shader.h  Swapchain.h  Texture.h
Libraries/LibRHI/D3D12/: DX12Buffer.cpp  DX12Buffer.h  DX12Device.cpp  DX12Device.h  DX12Shader.cpp  DX12Shader.h  DX12Swapchain.cpp  DX12Swapchain.h  DX12Texture.cpp  DX12Texture.h
Libraries/LibRHI/Metal/: MTLBuffer.cpp  MTLBuffer.h  MTLDevice.cpp  MTLDevice.h  MTLShader.cpp  MTLShader.h  MTLSwapchain.cpp  MTLSwapchain.h  MTLTexture.cpp  MTLTexture.h
Libraries/LibRHI/Vulkan/: VkBuffer.cpp  VkBuffer.h  VkCommandBuffer.cpp  VkCommandBuffer.h  VkCommon.h  VkDevice.cpp  VkDevice.h  VkPhysicalDevice.cpp  VkPhysicalDevice.h  VkPipeline.cpp  VkPipeline.h  VkRenderPass.cpp  VkRenderPass.h  VkRenderTarget.cpp  VkRenderTarget.h  VkResourceLayout.cpp  VkResourceLayout.h  VkResourceSet.cpp  VkResourceSet.h  VkSampler.cpp  VkSampler.h  VkShader.cpp  VkShader.h  VkSwapchain.cpp  VkSwapchain.h  VkTexture.cpp  VkTexture.h
Libraries/LibRenderer/: CMakeLists.txt  Camera.cpp  Camera.h  DeferredRenderer.cpp  DeferredRenderer.h  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Renderer.h  ResourceManager.cpp  ResourceManager.h  SubMesh.cpp  SubMesh.h
Libraries/LibSocket/: CMakeLists.txt  Forward.h
Libraries/LibUI/Platform/: Event.h  Input.cpp  Input.h  Window.h
Libraries/LibURL/: CMakeLists.txt  Forward.h
Meta/CMake/: BaseOptions.cmake  BaseTargets.cmake
Meta/CMake/Presets/: CMakeBasePresets.json  CMakeWindowsPresets.json
Resources/: .gitignore
Resources/Shaders/: BaseObject.fs.glsl  BaseObject.vs.glsl  Common.glsl  GeometryPass.fs.glsl  GeometryPass.vs.glsl  LightingPass.fs.glsl  LightingPass.vs.glsl
Tests/: CMakeLists.txt
Tests/LibConcurrency/: CMakeLists.txt  Scheduler.test.cpp
Tools/Sandbox/: CMakeLists.txt  Main.cpp
(+2 files in other folders)
